initial hook ups

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="/styles/reset.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
 
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
@@ -51,5 +53,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="https://eastlandjones.com/">Kevin Jones-Eastland</a>.
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
