implement newsletter sign-up form with responsive design and styling

--- a/index.html
+++ b/index.html
@@ -17,42 +17,71 @@
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <!-- Sign-up form start -->
+    <main>
+      <section class="newsletter" aria-labelledby="newsletter-title">
+        <div class="newsletter__media"></div>
 
-    Stay updated! Join 60,000+ product managers receiving monthly updates on:
-    Product discovery and building what matters Measuring to ensure updates are
-    a success And much more! Email address email@company.com Subscribe to
-    monthly newsletter
+        <div class="newsletter__body container">
+          <header class="newsletter__header t-preset-2">
+            <h1 id="newsletter-title" class="newsletter__heading">
+              Stay updated!
+            </h1>
+            <p class="newsletter__cta">
+              Join 60,000+ product managers receiving monthly updates on:
+            </p>
+            <ul class="newsletter__benefits">
+              <li>Product discovery and building what matters</li>
+              <li>Measuring to ensure updates are a success</li>
+              <li>And much more!</li>
+            </ul>
+          </header>
+
+          <form class="newsletter__form" action="/subscribe" method="post">
+            <div class="form-field">
+              <label for="email" class="form-field__label t-preset-3"
+                >Email address</label
+              >
+              <input
+                class="form-field__input"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="you@company.com"
+                autocomplete="email"
+                inputmode="email"
+                required
+                aria-describedby="email-error"
+              />
+              <p
+                id="email-error"
+                class="form-field__error"
+                aria-live="polite"
+                hidden
+              >
+                Please enter a valid email address.
+              </p>
+            </div>
+
+            <button class="newsletter__button t-preset-2--bold" type="submit">
+              Subscribe to monthly newsletter
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
 
     <!-- Sign-up form end -->
 
     <!-- Success message start -->
 
-    Thanks for subscribing! A confirmation email has been sent to
+    <!-- Thanks for subscribing! A confirmation email has been sent to
     ash@loremcompany.com. Please open it and click the button inside to confirm
-    your subscription. Dismiss message
+    your subscription. Dismiss message -->
 
     <!-- Success message end -->
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://eastlandjones.com/">Kevin Jones-Eastland</a>.
-    </div>
     <script src="index.js"></script>
   </body>
 </html>
